<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardview_margin"
    android:clickable="true"
    card_view:cardBackgroundColor="?attr/main_bg"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="32dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/forecast_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp">

            <TextView
                android:id="@+id/forecast_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_today"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="?attr/font_color"/>

            <TextView
                android:id="@+id/forecast_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/weather_forcast_temp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="?attr/font_color"/>

            <TextView
                android:id="@+id/forecast_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forecast_date"
                android:layout_marginTop="4dp"
                android:text="@string/weather_forcast_txt"
                android:textSize="10sp"
                android:textColor="?attr/font_color"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>