<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_head"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/head"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/article_author2head"
                android:text="@string/article_author_hint"
                android:textSize="@dimen/article_author_textSize"/>
            <TextView
                android:id="@+id/text_favourData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/article_author2head"
                android:text="@string/article_favour_date"
                android:textSize="@dimen/article_author_textSize"/>

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_thum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@mipmap/head"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toLeftOf="@id/image_thum"
            android:layout_alignParentLeft="true">
            <TextView
                android:id="@+id/article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/article_title_title"
                android:text="@string/article_title_hint"/>
            <TextView
                android:id="@+id/article_sketch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/article_sketch_textSize"
                android:maxEms="25"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="3dp"
                android:lineSpacingMultiplier="1.5"
                android:layout_below="@id/article_title"
                android:text="@string/article_sketch_hint"/>
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_marginTop="3dp"
        android:background="@color/detail_divider">
    </View>
</LinearLayout>