<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardview_margin"
    android:clickable="true"
    card_view:cardBackgroundColor="?attr/main_bg"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="2dp"
    card_view:isColorUi="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                card_view:srcCompat="@drawable/icon_cloth"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cloth_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_cloth_brief"
                    card_view:isColorUi="true"
                    android:textColor="?attr/font_color"/>

                <TextView
                    android:id="@+id/cloth_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="?attr/font_color"
                    android:textSize="12sp"
                    card_view:isColorUi="true"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                card_view:srcCompat="@drawable/icon_sport"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sport_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_sport_brief"
                    card_view:isColorUi="true"
                    android:textColor="?attr/font_color"/>

                <TextView
                    android:id="@+id/sport_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="12sp"
                    card_view:isColorUi="true"
                    android:textColor="?attr/font_color"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                card_view:srcCompat="@drawable/icon_travel"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/travel_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_travel_brief"
                    card_view:isColorUi="true"
                    android:textColor="?attr/font_color"/>

                <TextView
                    android:id="@+id/travel_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="12sp"
                    card_view:isColorUi="true"
                    android:textColor="?attr/font_color"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                card_view:srcCompat="@drawable/icon_flu"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/flu_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_flu_brief"
                    card_view:isColorUi="true"
                    android:textColor="?attr/font_color"/>

                <TextView
                    android:id="@+id/flu_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="12sp"
                    card_view:isColorUi="true"
                    android:textColor="?attr/font_color"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>